Swippable Dashboard Map

--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,11 @@
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
 
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCj48Higya7lvOC_RQo9-ahnLH2yIj_xv0" defer></script>
+
+  <!-- Google Maps JavaScript API key for google_maps_flutter_web -->
+  <meta name="google-maps-api-key" content="AIzaSyCj48Higya7lvOC_RQo9-ahnLH2yIj_xv0">
+
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
