--- a/web/index.html
+++ b/web/index.html
@@ -28,13 +28,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="autonomousuav">
+  <meta name="apple-mobile-web-app-title" content="SOARIS">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>autonomousuav</title>
+  <title>SOARIS</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
